--- a/src/css/jquery.qeditor.scss
+++ b/src/css/jquery.qeditor.scss
@@ -1,17 +1,53 @@
 .qeditor_border {
   background:#FFF;
-  height:500px;
   padding-bottom:20px;
+  text-align: center;
 }
 .qeditor_toolbar { 
-  margin-bottom:3px; 
+  text-align: left;
   background:#FFF;
+  margin: 0 auto 3px auto;
   span.vline { border-left:1px solid #bbb; padding-right:11px; }
   a {
-    color:#333;
+    color: #444;
     text-decoration: none;
     font-size:14px;
     margin-right:6px;
+    &:hover {
+      color: #000;
+    }
   }
 }
-.qeditor_preview { height:100%; }
+.qeditor_preview { text-align: left; min-height:80px; margin:0 auto; }
+.qeditor_fullscreen {
+  position: fixed;
+  background:#FFF;
+  top:0; left:0; bottom:0; right:0; 
+  z-index: 99990;
+  padding:30px 0;
+  overflow:hidden;
+  
+  .qeditor_preview { 
+    max-width: 900px; 
+    box-sizing: border-box;
+    width: 100%;
+    height: 90%;
+    margin-top: 20px;
+    border:0;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    -webkit-transition: none;
+    -moz-transition: none;
+    -o-transition: none;
+    transition: none;
+    padding:0;
+  }
+  .qeditor_toolbar { 
+    max-width: 900px; 
+    box-sizing: border-box;
+    width: 100%;
+    padding-bottom:10px;
+    a { font-size:18px; margin-right:8px; }
+  }
+}
