--- a/src/css/jquery.qeditor.scss
+++ b/src/css/jquery.qeditor.scss
@@ -9,7 +9,7 @@
   background:#FFF;
   margin: 0 auto 3px auto;
   span.vline { border-left:1px solid #bbb; padding-right:11px; }
-  a {
+  a,.qe-icon {
     color: #444;
     text-decoration: none;
     font-size:14px;
@@ -18,6 +18,44 @@
       color: #000;
     }
   }
+  
+  .qe-heading {
+    position: relative;
+    .qe-menu {
+      width: 120px;
+      display: none;
+      position: absolute;
+      left:-25px; top:15px;
+      border:1px solid #eee;
+      z-index:9991;
+      background:rgba(255,255,255,0.7);
+      list-style: none;
+      li { display:inline; padding:0; margin:0; }
+      a { 
+        display:block;
+        margin:0;
+        padding:2px 10px;
+        &:hover {
+          background:#f0f0f0;
+        }
+      }
+      .qe-h1 { font-size:17px; font-weight:bold; }
+      .qe-h2 { font-size:16px; font-weight:bold; }
+      .qe-h3 { font-size:15px; font-weight:bold; }
+      .qe-h4 { font-size:14px; font-weight:bold; }
+      .qe-h5 { font-size:13px; font-weight:bold; }
+      .qe-h6 { font-size:12px; font-weight:bold; }
+      .qe-hline { border-top:1px solid #ddd; margin:0 -10px; margin-bottom:5px; margin-top:5px;}
+      .qe-p { font-size:12px; }
+    }
+    &:hover {
+      .icon { background:#eee; }
+      .qe-menu {
+        display:block;
+      }
+    }
+  }
+  
 }
 .qeditor_preview { 
   text-align: left;
