Fix heading menu style.

--- a/src/css/jquery.qeditor.scss
+++ b/src/css/jquery.qeditor.scss
@@ -25,6 +25,7 @@
       width: 120px;
       display: none;
       position: absolute;
+      margin:0; padding:0;
       left:-25px; top:15px;
       border:1px solid #eee;
       border-right: 1px solid #ddd;
