--- a/src/css/jquery.qeditor.scss
+++ b/src/css/jquery.qeditor.scss
@@ -13,9 +13,9 @@
 
 .qeditor_preview {
     text-align: left;
-    min-height:80px;
+    min-height:320px;
     margin:0 auto;
-    height: 320px;
+    height: auto;
     vertical-align: middle;
     overflow-y:scroll;
 }
@@ -28,16 +28,17 @@
     top:0; left:0; bottom:0; right:0;
     padding: 0;
     z-index: 99990;
-    overflow:hidden;
+    overflow: scroll;
 
     .qeditor_preview {
         max-width: 920px;
         box-sizing: border-box;
         width: 100%;
-        height: 90%;
+        height: auto;
         margin: 0 auto;
         padding: 15px 75px;
         border:0;
+        border-radius: 0;
         -webkit-box-shadow: none;
         -moz-box-shadow: none;
         box-shadow: none;
