--- a/src/css/jquery.qeditor.scss
+++ b/src/css/jquery.qeditor.scss
@@ -28,15 +28,15 @@
     top:0; left:0; bottom:0; right:0;
     padding: 0;
     z-index: 99990;
-    overflow: scroll;
+    overflow: hidden;
 
     .qeditor_preview {
-        max-width: 920px;
         box-sizing: border-box;
+        max-width: 920px;
         width: 100%;
-        height: auto;
+        height: 100%;
         margin: 0 auto;
-        padding: 15px 75px;
+        padding: 115px 75px 15px 75px;
         border:0;
         border-radius: 0;
         -webkit-box-shadow: none;
@@ -49,11 +49,13 @@
     }
 
     .qeditor_toolbar {
+        position: fixed;
         max-width: 920px;
         box-sizing: border-box;
         width: 100%;
+        height: 100px;
+        top: 0; left:0; right:0;
         border-bottom: 1px solid #ccc;
-        padding-bottom:15px;
         padding: 50px 75px 15px 75px;
         margin: 0 auto;
     }
