--- a/src/css/jquery.qeditor.scss
+++ b/src/css/jquery.qeditor.scss
@@ -13,9 +13,9 @@
 
 .qeditor_preview {
     text-align: left;
-    min-height:320px;
+    min-height:100px;
     margin:0 auto;
-    height: auto;
+    height: 320px;
     vertical-align: middle;
     overflow-y:scroll;
 }
